# 2023-openlab-fake-rank

./: Cargo.toml  Dockerfile  pom.xml
src/: main.rs
src/main/java/com/opanlab/fakerank/: FakeController.java  FakerankApplication.java  LevelScore.java  MyExceptionHandler.java  StudentScoreInfo.java
src/test/java/com/opanlab/fakerank/: FakerankApplicationTests.java
