[package]
name = "openlab-fake-rank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = {version = "=1.0.126", features = ["derive"] }
rand = "0.8.5"